CKA/2022/yaml/db-pod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db
spec:
  podSelector: 
    matchLabels:
      app: db
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 80
  - from:
    - podSelector:
        matchLabels:
          app: api
